<resources>
    <string name="app_name">Crypto Text</string>
    <string name="do_the_magic">Do The Magic</string>
    <string name="encode_message">ENCODE MESSAGE</string>
    <string name="decode_message">DECODE MESSAGE</string>
    <string name="paste_the_encoded_text_here">Paste the encoded text here</string>
    <string name="conversion_will_be_displayed_here">Conversion will be displayed here</string>
    <string name="conversion_will_be_displayed">Conversion will be displayed</string>
    <string name="type_the_message_here">Type the message here</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="encode">ENCODE</string>
    <string name="decode">DECODE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="_1_letter">1 Letter</string>
    <string name="_2_letters">2 Letters</string>
    <string name="_3_letters">3 Letters</string>

</resources>
